[gd_scene load_steps=8 format=2]

[ext_resource path="res://characters/heroes/roll/sprites/icon.png" type="Texture" id=1]
[ext_resource path="res://characters/heroes/megaman/sprites/icon.png" type="Texture" id=2]
[ext_resource path="res://scenes/CharacterSelectScene.gd" type="Script" id=3]
[ext_resource path="res://scenes/CharacterSelect.mp3" type="AudioStream" id=4]
[ext_resource path="res://fonts/arial.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 6 )

[node name="CharacterSelectScene" type="Node2D"]
script = ExtResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = 462.0
margin_top = 60.0
margin_right = 1083.0
margin_bottom = 142.0
custom_fonts/font = SubResource( 1 )
text = "Choose your character!"

[node name="CharacterLogo" type="Sprite" parent="Label"]
position = Vector2( 299, 160 )
scale = Vector2( 0.75, 0.75 )

[node name="RollIcon" type="Button" parent="Label"]
margin_left = 350.0
margin_top = 209.0
margin_right = 559.0
margin_bottom = 416.0
icon = ExtResource( 1 )
expand_icon = true

[node name="MegamanIcon" type="Button" parent="Label"]
margin_left = 25.0
margin_top = 216.0
margin_right = 251.0
margin_bottom = 406.0
icon = ExtResource( 2 )

[node name="StartGame" type="Button" parent="."]
visible = false
margin_left = 599.0
margin_top = 608.0
margin_right = 918.0
margin_bottom = 696.0
custom_fonts/font = SubResource( 2 )
disabled = true
text = "Start Game"

[node name="TrainingMode" type="Button" parent="."]
visible = false
margin_left = 570.0
margin_top = 497.0
margin_right = 963.0
margin_bottom = 585.0
custom_fonts/font = SubResource( 2 )
disabled = true
text = "Training Mode"
